force-app/IdPorten/objects/ID_porten__mdt/ID_porten__mdt.object-meta.xml
<CustomObject>
    <label>ID-porten</label>
    <pluralLabel>ID-porten</pluralLabel>
</CustomObject>