force-app/IdPorten/objects/ID_porten__mdt/fields/AcrValues__c.field-meta.xml
<CustomField>
    <fullName>AcrValues__c</fullName>
    <label>ACR Values</label>
    <length>30</length>
    <type>Text</type>
</CustomField>