force-app/IdPorten/objects/ID_porten__mdt/fields/AuthorizeEndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeEndpointUrl__c</fullName>
    <label>Authorize Endpoint URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>