force-app/IdPorten/objects/ID_porten__mdt/fields/CodeVerifierKey__c.field-meta.xml
<CustomField>
    <fullName>CodeVerifierKey__c</fullName>
    <label>Code Verifier Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>