force-app/IdPorten/objects/ID_porten__mdt/fields/CodeVerifierSecret__c.field-meta.xml
<CustomField>
    <fullName>CodeVerifierSecret__c</fullName>
    <label>Code Verifier Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>