force-app/IdPorten/objects/ID_porten__mdt/fields/ConsumerKey__c.field-meta.xml
<CustomField>
    <fullName>ConsumerKey__c</fullName>
    <label>Consumer Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>