force-app/IdPorten/objects/ID_porten__mdt/fields/ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>ConsumerSecret__c</fullName>
    <label>Consumer Secret</label>
    <length>40</length>
    <type>Text</type>
</CustomField>