force-app/IdPorten/objects/ID_porten__mdt/fields/NetworkId__c.field-meta.xml
<CustomField>
    <fullName>NetworkId__c</fullName>
    <label>Network Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>