force-app/IdPorten/objects/ID_porten__mdt/fields/RedirectUrl__c.field-meta.xml
<CustomField>
    <fullName>RedirectUrl__c</fullName>
    <label>RedirectUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>