force-app/IdPorten/objects/ID_porten__mdt/fields/TokenEndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>TokenEndpointUrl__c</fullName>
    <label>Token Endpoint URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>