force-app/IdPorten/objects/ID_porten__mdt/fields/TokenInfoEndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>TokenInfoEndpointUrl__c</fullName>
    <label>Token Info Endpoint URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>