force-app/IdPorten/objects/ID_porten__mdt/fields/UrlSuffix__c.field-meta.xml
<CustomField>
    <fullName>UrlSuffix__c</fullName>
    <label>Url Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>