force-app/IdPorten/objects/ID_porten__mdt/fields/UserInfoEndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>UserInfoEndpointUrl__c</fullName>
    <label>User Info Endpoint URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>